fixed overflow in main canvas

--- a/css/style.css
+++ b/css/style.css
@@ -67,4 +67,5 @@
 #main-canvas{
     height: 600px;
     width: 600px;
+    box-sizing: content-box
 }
